<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kancolle Announcer</string>
    <string name="action_settings">Settings</string>
    <string name="directory_default">Press to select directory</string>
    <string name="back_hint">Press back button to go up directory</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="scandir">SCAN DIR</string>
    <string name="savekanmusu">SAVE KANMUSU</string>
    <string name="selectall">Select All</string>
    <string name="dirtitle">Dir:</string>
    <string name="saved">Saved</string>
    <string name="alarmset">Alarm Set</string>
    <string name="alarmstop">Alarm Removed</string>
    <string name="bgdesc">background</string>
    <string name="mediaspinnertitle">Volume Type</string>
    <string name="callspinnertitle">Action During Call</string>
    <string name="quiethours">Use Quiet Hours</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="quietvolume">Quiet Hours Volume</string>
    <string name="savesettings">SAVE SETTINGS</string>
    <string name="mediaspinner">Choose Volume Type</string>
    <string name="callspinner">Choose Action</string>
    <string name="viewererror1">Please rescan directory to generate list</string>
    <string name="viewererror2">In the Kanmusu page, please choose directory and scan</string>
    <string name="useshuffle">Shuffle Notification Ringtone</string>
    <string name="rtoneunset">Ringtone set, Shuffle disabled</string>
    <string name="rtoneset">Ringtone set</string>
    <string name="rtoneshufset">Shuffle group set</string>
    <string name="rtoneshufenset">Shuffle group set, Shuffle enabled</string>
    <string name="rtonesetlist">Set clip as notification ringtone</string>
    <string name="rtonesetkanmusu">Set this kanmusu\'s clips as shuffle group</string>
    <string name="viewerkantext">Viewer kanmusu: </string>
    <string name="shufflespinner">Choose Shuffle Type</string>
    <string name="minutefill">: 00</string>
    <string name="columnfill">columns</string>
    <string name="rowfill">rows</string>
    <string name="columnstitle">Homescreen Columns</string>
    <string name="rowstitle">Homescreen Rows</string>
    <string name="starttimesub">Quiet Hours Volume will be used on this hour</string>
    <string name="endtimesub">Quiet Hours Volume will not be used on this hour</string>
    <string name="startpicktitle">Select Start Hour</string>
    <string name="endpicktitle">Select End Hour</string>
	<string name="shuffleclipselectiontext">Select shuffle list</string>
	<string name="descopen">Navigation Drawer Open</string>
	<string name="descclosed">Navigation Drawer Closed</string>
	<string name="usekanmususelectiontext">Select kanmusu to use for announcements</string>
	<string name="numfoundtitle">No. found total: </string>
	<string name="numclipstitle">No. with clips: </string>
	<string name="numusetitle">No. selected: </string>
	<string name="kanmusu">kanmusu</string>
	<string name="pickkanmusu">PICK KANMUSU</string>
	<string name="enabletexttitle">Announcement: </string>
	<string name="enabled">Enabled</string>
	<string name="disabled">Disabled</string>
	<string name="notset">Not Set</string>
	<string name="shufflesettingstitle">Notification Shuffle Settings</string>
	<string name="play">\u25BA</string>
	<string name="stop">\u25A0</string>
	<string name="kanmusulist">Kanmusu List</string>
	<string name="soundclips">Sound Clips</string>
	<string name="refreshtitle">Refresh</string>
	<string name="logenabletitle">Enable logging</string>
	<string name="logverbosetitle">Verbose logging</string>
	<string name="setsecretary">Set this kanmusu as Secretary</string>
	<string name="secretarykantext">Viewer selected Secretary: </string>
	<string name="backgroundstitletext">Background Image Settings</string>
	<string name="widgetstitletext">Widget Image Settings</string>
	<string name="imgselectspinner">Select Secretary Kanmusu</string>
	<string name="imgtypespinner">Select Image Type</string>
	<string name="secretaryset">Kanmusu Secretary Set</string>
	<string name="playidletext">Play idle line on device boot</string>
	<string name="medwidgettitle">Kancolle Clock Medium</string>
	<string name="lrgwidgettitle">Kancolle Clock Large</string>
	<string name="mlwidgettitle">Kancolle Clock Medium Large</string>
	<string name="reswidgettitle">Kancolle Clock Resizable</string>
	<string name="secwidgettitle">Kancolle Secretary</string>
	<string name="widget24hrtext">Use 24hr time on widgets</string>
    

</resources>
