<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >
	
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/saveSettings" >
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        
		    <TextView
		        android:id="@+id/mediaSpinnerTitle"
		        style="@style/bigtext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/mediaspinnertitle" />
		    
		    <Spinner
		         android:id="@+id/mediaSpinner"
		         style="@style/medtext"
		         android:layout_width="260dp"
		         android:layout_height="wrap_content"
		         android:layout_alignLeft="@+id/quietHoursBox"
		         android:layout_below="@+id/mediaSpinnerTitle"
		         android:layout_marginTop="5dp"
		         android:prompt="@string/mediaspinner"
		         android:entries="@array/audiostream"
		         android:spinnerMode="dialog" />
		    
		    <CheckBox
		        android:id="@+id/quietHoursBox"
		        style="@style/medtext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/mediaSpinner"
		        android:layout_marginTop="15dp"
		        android:text="@string/quiethours" />
		    
			<LinearLayout
			    android:id="@+id/startTimeLayout"
			    android:layout_width="160dp"
		    	android:layout_height="wrap_content"
		    	android:layout_alignParentLeft="true"
			    android:layout_below="@+id/quietHoursBox"
			    android:orientation="vertical"
			    android:paddingTop="10dp"
			    android:paddingBottom="10dp"
			    android:paddingLeft="30dp"
			    android:paddingRight="30dp" >
			    
			    <TextView
			        android:id="@+id/quietHoursStartTitle"
			        style="@style/bigtext"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"        
			        android:text="@string/starttime"
			        android:gravity="center" />
			    
			    <TextView
			        android:id="@+id/quietHoursStart"
			        style="@style/medtext"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:gravity="center" /> 
			        
		    </LinearLayout>
		    
			<LinearLayout
			    android:id="@+id/endTimeLayout"
			    android:layout_width="160dp"
		    	android:layout_height="wrap_content"
		    	android:layout_toRightOf="@+id/startTimeLayout"
			    android:layout_alignTop="@+id/startTimeLayout"
			    android:layout_marginLeft="60dp"
			    android:orientation="vertical"
			    android:paddingTop="10dp"
			    android:paddingBottom="10dp"
			    android:paddingLeft="30dp"
			    android:paddingRight="30dp" >
			    
			    <TextView
			        android:id="@+id/quietHoursEndTitle"
			        style="@style/bigtext"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"        
			        android:text="@string/endtime"
			        android:gravity="center" />
			
			    <TextView
			        android:id="@+id/quietHoursEnd"
			        style="@style/medtext"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:gravity="center" />
			    
		    </LinearLayout>
		         
		     <TextView
		         android:id="@+id/quietHoursVolumeTitle"
		         style="@style/medtext"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_alignParentLeft="true"
		         android:layout_below="@+id/startTimeLayout"
		         android:text="@string/quietvolume" />
		
		     <SeekBar
		         android:id="@+id/quietHoursVolume"
		         android:layout_width="400dp"
		         android:layout_height="wrap_content"
		         android:layout_alignParentLeft="true"
		         android:layout_below="@+id/quietHoursVolumeTitle"
		         android:layout_marginTop="5dp"
		         android:paddingLeft="20dp"
		         android:paddingRight="20dp" />
		     
		     <TextView
		        android:id="@+id/callSpinnerTitle"
		        style="@style/bigtext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/quietHoursVolume"
		        android:layout_marginTop="10dp"
		        android:layout_alignParentLeft="true"
		        android:text="@string/callspinnertitle" />
		     
		     <Spinner
		         android:id="@+id/callSpinner"
		         style="@style/medtext"
		         android:layout_width="260dp"
		         android:layout_height="wrap_content"
		         android:layout_alignLeft="@+id/quietHoursBox"
		         android:layout_below="@+id/callSpinnerTitle"
		         android:layout_marginTop="5dp"
		         android:prompt="@string/callspinner"
		         android:entries="@array/calltask"
		         android:spinnerMode="dialog" />
		     
		     <CheckBox
		        android:id="@+id/shuffleBox"
		        style="@style/medtext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/callSpinner"
		        android:layout_marginTop="15dp"
		        android:text="@string/useshuffle"
		        android:saveEnabled="false" />
		     
		     <Spinner
		         android:id="@+id/shuffleSpinner"
		         style="@style/medtext"
		         android:layout_width="260dp"
		         android:layout_height="wrap_content"
		         android:layout_alignLeft="@+id/quietHoursBox"
		         android:layout_below="@+id/shuffleBox"
		         android:layout_marginTop="5dp"
		         android:prompt="@string/shufflespinner"
		         android:entries="@array/shuffleaction"
		         android:spinnerMode="dialog" />
	    
		</RelativeLayout>
    
	</ScrollView>
     
     <Button
        android:id="@+id/saveSettings"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/savesettings" />

</RelativeLayout>